[package]
name = "chatpack-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for chatpack"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
chatpack = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
